Add GC args to performance test